[package]
name = "term_mux"
version = "0.1.1"
authors = ["Matthias Devlamynck <matthias.devlamynck@mailoo.org>"]
license = "MIT"

[dependencies]
libc = "0"
termion = "1"
chan-signal = "0"
vte = "0"
mockers_macros = "0.6.3"

[dev-dependencies]
mockers = "0.6.3"

[[bin]]
name = "term_mux"
doc = false

[lib]
doc = true
